--- a/joyous-bananas/app.json
+++ b/joyous-bananas/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "joyous-bananas",
-    "slug": "snack-2ecb5c2e-e875-4297-80d7-cc0ce0f82796",
+    "name": "eager-orange-sandwich",
+    "slug": "snack-2836e85c-0ce9-4fc8-b39a-2632d05e6abc",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
